[tool.poetry]
name = "segment-remote-sens-images"
version = "0.1.0"
description = "Remote Sensing Image Segmentaion"
authors = ["Hamza Qureshi <hamza7771.861@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
